gallery.css
#lb-overlay {
    width: 100vw;
    height: 100vh;
    position: fixed;
    top: 0px;
    left: 0px;
    background: rgba(51, 51, 51, 0.95);
    z-index: 100; 
}

#lb-overlay img {
    max-width: 90%;
    max-height: 90%;
    /* margin: auto;
    margin-top: 20%; */
}

div#close{
    color: white;
    font-size: 30px;
    position: fixed;
    top: 80px;
    left: 80px;
}


#prev{
    color: white;
    font-size: 80px;
    position: fixed;
    top: 47%;
    left: 30px;
}

#next{
    color: white;
    font-size: 80px;
    position: fixed;
    top: 47%;
    right: 30px;
}

@media screen and (max-width: 800px) {
    #prev, #next {
      opacity: 0%;
      height: 100vh;
      width: 30vw;
      top: 0px
    }
    #prev{
        left: 0px;
    }
    #next{
        right: 0px;
    }
  }

div#prev:hover, div#next:hover {
    font-size: 85px;
    cursor: pointer;
}

div#close:hover {
    font-size: 32px;
    cursor: pointer;
}

.galimg:hover {
    cursor: pointer;
    opacity: 70%;
}

